fixed z-index of youtube-vids  fixed bug to hide right_side

--- a/view/theme/diabook-blue/style-network.css
+++ b/view/theme/diabook-blue/style-network.css
@@ -2134,7 +2134,7 @@ blockquote {
 	 color: #777;
 }
 .oembed {
-	font-size: large;
+	
 	font-weight: bold;
 }
 .aprofile dt{
