--- a/view/theme/diabook-blue/style.css
+++ b/view/theme/diabook-blue/style.css
@@ -1236,7 +1236,7 @@ body .pageheader{
   font-size: 20px;
   margin-bottom: 20px;
   margin-top: 0px;
-  max-width: 575px;
+  max-width: 775px;
 	}
 .qcomment{
   max-width: 122px;	
@@ -2281,7 +2281,7 @@ blockquote {
 	 color: #777;
 }
 .oembed {
-	font-size: large;
+	
 	font-weight: bold;
 }
 .aprofile dt{
